--- a/article-journal.tex
+++ b/article-journal.tex
@@ -25,7 +25,7 @@
 
 \pretitle{\begin{center}\Huge\bfseries} % Article title formatting
 \posttitle{\end{center}} % Article title closing formatting
-\title{\Large{IMPLEMENTASI FILTER SPASIAL LINEAR PADA VIDEO \textit{STREAM} MENGGUNAKAN \textit{FPGA HARDWARE ACCELERATOR}}} % Article title
+\title{\Large{PENGEMBANGAN SISTEM HMI SUMBER TERBUKA UNTUK PLC OMRON BERBASIS PROTOKOL FINS DENGAN VISUALISASI WEB}} % Article title
 \author{%
     \textsc{Sulaeman} \\ % Your name
     \normalsize {Universitas Hasanuddin} \\ % Your institution
