--- a/seminar-hasil.tex
+++ b/seminar-hasil.tex
@@ -6,24 +6,26 @@
 %===========================================================
 % Definisi Data Peneliti, Judul, Pembimbing dan Penguji
 %-----------------------------------------------------------
-\titleskripsi{IMPLEMENTASI FILTER SPASIAL LINEAR PADA VIDEO \textit{STREAM} MENGGUNAKAN \textit{FPGA HARDWARE ACCELERATOR}}
+\titleskripsi{PENGEMBANGAN SISTEM HMI SUMBER TERBUKA UNTUK PLC OMRON BERBASIS PROTOKOL FINS DENGAN VISUALISASI WEB}
 
-\fullname{SULAEMAN}
-\idnum{H131 16 002}
+\fullname{Denny Chrisnanda}
+\idnum{2502124914}
 
-\yearsubmit{2021}
-\program{Sistem Informasi}
-\dept{Matematika}
-\faculty{Matematika dan Ilmu Pengetahuan Alam}
-\university{Universitas Hasanuddin}
-\city{Makassar}
+\yearsubmit{2025}
+\program{Computer Science Study Program}
+\dept{asiai}
+\faculty{BINUS Online Learning}
+\university{Universitas Bina Nusantara}
+\city{Jakarta}
 
-\firstsupervisor{Dr. Eng. Armin Lawi, S.Si., M.Eng.}
-\firstsupervisorNIP{197204231995121001}
-\secondsupervisor{Supri Bin Hj Amir, S.Si., M.Eng.}
-\secondsupervisorNIP{198805042019031012}
-\firstexaminer{ Dr. Hendra, S.Si., M.Kom.}
-\secondexaminer{ Nur Hilal A Syahrir, S.Si., M.Si.}
+%\firstsupervisor{Dr. Eng. Armin Lawi, S.Si., M.Eng.}
+%\secondsupervisor{Dr. Diaraya, M.Ak.}
+%\firstexaminer{ Dr. Hendra, S.Si., M.Kom.}
+%\secondexaminer{ Nur Hilal A Syahrir, S.Si., M.Si.}
+%-----------------------------------------------------------
+% End Definisi Data Peneliti, Judul, Pembimbing dan Penguji
+%===========================================================
+
 %-----------------------------------------------------------
 % End Definisi Data Peneliti, Judul, Pembimbing dan Penguji
 %===========================================================
