--- a/seminar-proposal.tex
+++ b/seminar-proposal.tex
@@ -5,14 +5,14 @@
 %===========================================================
 % Definisi Data Peneliti, Judul, Pembimbing dan Penguji
 %-----------------------------------------------------------
-\titleskripsi{IMPLEMENTASI FILTER SPASIAL LINEAR PADA VIDEO \textit{STREAM} MENGGUNAKAN \textit{FPGA HARDWARE ACCELERATOR}}
+\titleskripsi{PENGEMBANGAN SISTEM HMI SUMBER TERBUKA UNTUK PLC OMRON BERBASIS PROTOKOL FINS DENGAN VISUALISASI WEB}
 
 \fullname{Denny Chrisnanda}
 \idnum{2502124914}
 
 \yearsubmit{2025}
 \program{Computer Science Study Program}
-\dept{Matesa}
+\dept{asiai}
 \faculty{BINUS Online Learning}
 \university{Universitas Bina Nusantara}
 \city{Jakarta}
