--- a/seminar-hasil.tex
+++ b/seminar-hasil.tex
@@ -8,8 +8,8 @@
 %-----------------------------------------------------------
 \titleskripsi{PENGEMBANGAN SISTEM HMI SUMBER TERBUKA UNTUK PLC OMRON BERBASIS PROTOKOL FINS DENGAN VISUALISASI WEB}
 
-\fullname{Denny Chrisnanda}
-\idnum{2502124914}
+\fullname{Denny Chrisnanwwda}
+\idnum{2502124913}
 
 \yearsubmit{2025}
 \program{Computer Science Study Program}
