--- a/article-journal-en.tex
+++ b/article-journal-en.tex
@@ -10,7 +10,7 @@
 \posttitle{\end{center}} % Article title closing formatting
 \title{\Large{Implementation of Linear Spatial Filter on Video Stream Using FPGA Hardware Accelerator}} % Article title
 \author{%
-    \textsc{Sulaeman} \\ % Your name
+    \textsc{Denny Chrisnanda} \\ % Your name
     \normalsize {Hasanuddin University} \\ % Your institution
     \normalsize {sulaeman16h@student.unhas.ac.id} % Your email address
     % \and % Uncomment if 2 authors are required, duplicate these 4 lines if more
