--- a/article-journal.tex
+++ b/article-journal.tex
@@ -27,7 +27,7 @@
 \posttitle{\end{center}} % Article title closing formatting
 \title{\Large{PENGEMBANGAN SISTEM HMI SUMBER TERBUKA UNTUK PLC OMRON BERBASIS PROTOKOL FINS DENGAN VISUALISASI WEB}} % Article title
 \author{%
-    \textsc{Sulaeman} \\ % Your name
+    \textsc{Denny Chrisnanda} \\ % Your name
     \normalsize {Universitas Hasanuddin} \\ % Your institution
     \normalsize {sulaeman16h@student.unhas.ac.id} % Your email address
     % \and % Uncomment if 2 authors are required, duplicate these 4 lines if more
