--- a/include/kata-pengantar.tex
+++ b/include/kata-pengantar.tex
@@ -38,7 +38,7 @@ Penulis menyadari bahwa skripsi ini masih jauh dari sempurna dikarenakan terbata
 \begin{flushright}
     Makassar, 9 April 2021\\
     \vspace{2.5cm}
-    {SULAEMAN}\\
+    {DENNY CHRISNANDA}\\
     NIM. {H13116002}
 \end{flushright}
 
