--- a/seminar-proposal.tex
+++ b/seminar-proposal.tex
@@ -12,7 +12,7 @@
 
 \yearsubmit{2025}
 \program{Computer Science Study Program}
-\dept{asiai}
+\dept{~}
 \faculty{BINUS Online Learning}
 \university{Universitas Bina Nusantara}
 \city{Jakarta}
