--- a/skripsi.tex
+++ b/skripsi.tex
@@ -8,7 +8,7 @@
 %-----------------------------------------------------------
 \titleskripsi{IMPLEMENTASI FILTER SPASIAL LINEAR PADA VIDEO \textit{STREAM} MENGGUNAKAN \textit{FPGA HARDWARE ACCELERATOR}}
 
-\fullname{SULAEMAN}
+\fullname{DENNY CHRISNANDA}
 \idnum{H131 16 002}
 
 \program{Sistem Informasi}
